# NeuroDesk

./: Cargo.toml  README.md  index.html  snapcraft.yaml
css/: output.css
src/: router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/ai/: ai_functions.rs  mod.rs
src-tauri/src/database/: db.rs  mod.rs
src/components/: mod.rs
src/components/navigation/: nav.rs
src/components/posts/: create_post.rs  list_models.rs  mod.rs  post_by_model.rs  post_by_model_stream.rs  query_ai.rs  stream_ai.rs  stream_ai_thinking.rs  thinking_post_by_model_stream.rs
src/pages/: home.rs
