[package]
name = "neurodesk-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.8.7",  features = ["nightly"] }
reactive_stores = "0.2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos-use = "0.16.2"
leptos_icons = "0.7.0"
codee = "0.3.0"
icondata = "0.6.0"
web-sys = "0.3"
select = "0.6.0"
serde_json = "1"
gloo = "0.11.0"

[workspace]
members = ["src-tauri"]
