[package]
name = "neurodesk"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neurodesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version="0.3.2", features = ["stream"] }
tauri-plugin-store = "2"
chrono = "0.4.39"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
anyhow = "1.0.100"
turso = "0.2.2"
